force-app/main/default/objects/Personal_Financial_Item__c/Personal_Financial_Item__c.object-meta.xml
<CustomObject>
    <label>Personal Financial Item</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Personal Financial Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Financial Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>