force-app/main/default/objects/Personal_Financial_Item__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Personal Financial Items</relationshipLabel>
    <relationshipName>Personal_Financial_Items</relationshipName>
    <type>Lookup</type>
</CustomField>