force-app/main/default/objects/Personal_Financial_Item__c/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guarantor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Personal Financial Items</relationshipLabel>
    <relationshipName>Personal_Financial_Items</relationshipName>
    <type>Lookup</type>
</CustomField>