force-app/main/default/objects/Personal_Financial_Item__c/fields/Personal_Financial_Summary__c.field-meta.xml
<CustomField>
    <fullName>Personal_Financial_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Financial Summary</label>
    <referenceTo>Personal_Financial_Summary__c</referenceTo>
    <relationshipLabel>Personal Financial Items</relationshipLabel>
    <relationshipName>Personal_Financial_Items</relationshipName>
    <type>Lookup</type>
</CustomField>