force-app/main/default/objects/Personal_Financial_Item__c/recordTypes/R1.recordType-meta.xml
<RecordType>
    <fullName>R1</fullName>
    <active>true</active>
    <label>R1</label>
</RecordType>